test/Fail/SectionsInIdiomBrackets.err
SectionsInIdiomBrackets.agda:36.13-24: error: [IdiomBracketError]
Naked sections are not allowed in idiom brackets
when scope checking ⦇ _⊕ b ⦈
